bitfields/tests/compile_error_cases/errors/bitfield_field_bits_with_suffix.rs
use bitfields::bitfield;

#[bitfield(u32)]
pub struct Bitfield {
    #[bits(8u8)]
    a: u32,
}

fn main() {}
